tests/errors/coalesce-undetermined/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0126]: `??`'s left-hand side has an undetermined type.
  │
  ├─𜱶 help: annotate the left-hand side so the carrier (option / result) can be selected.
  │
3 │  x ?? 0
  │  ^^^^^^
  ╰─𜱶 tests/errors/coalesce-undetermined/main.pa:3:2
